hsreplaynet/static/styles/card_detail.scss
.card-detail-container {
	display: flex;

	@media (max-width: 768px) {
		flex-direction: column;
	}

	> main {
		min-height: calc(100vh - 50px);
		padding-top: 10px;
		width: calc(100% - 300px);

		> .row {
			border-bottom: 1px solid $lightgrey;
		}

		> .row:nth-child(even) {
			background: rgb(249, 249, 249);
		}

		.card-tables {
			table {
				max-width: 500px;
				margin: 0 auto;
			}
		}

		h3 {
			text-align: center;
			margin-top: 20px;
		}

		@media (max-width: 768px) {
			max-width: 100%;
			width: 100%;
		}

		#class-chart {
			margin: 0 auto;
			max-width: 450px;
		}

		#turn-stats {
			.premium-wrapper {
				padding-bottom: 2em;
			}
		}

		#quest-completion {
			padding-top: 2em;
		}

		.chart-wrapper > .info-icon {
			color: $blue;
			font-size: 1em;
			left: 3%;
			@media (min-width: 1336px) {
				left: calc(50% - 350px);
			}
			padding: 0;
			position: absolute;
			right: unset;
			top: 5%;
		}

		#content-header > h1 {
			font-size: 2em;
			font-weight: bold;
			text-align: center;
		}
	}

	> aside {
		.card-image {
			width: 256px;
		}

		> p {
			font-style: italic;
			margin: 0 10px 10px 10px;
			text-align: center;
		}

		@media (max-width: 768px) {
			max-width: 100%;
			width: 100%;
			padding-bottom: 0;
		}
	}

	.chart-wrapper {
		max-width: 700px;
		margin: 0 auto;
	}
}

